<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">


    <ImageView
        android:id="@+id/imageView_detail"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titulo_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listaTitulo"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/director_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listaDirector"
            android:textSize="15sp" />
    </LinearLayout>
</FrameLayout>